# snake

./: .gitignore  CMakeLists.txt  README.md  race00
app/: CMakeLists.txt  main.cpp
app/resources/: .leaderboard  config
app/src/: StateMachine.cpp  StateMachine.h  snake.cpp  snake.h
app/src/StateMachines/: DeathState.cpp  DeathState.h  GameState.cpp  GameState.h  MenuState.cpp  MenuState.h  ScoreboardState.cpp  ScoreboardState.h  StateMachineBase.h  StateManager.cpp  StateManager.h
framework/: CMakeLists.txt
framework/inc/: Framework.h  Subwindow.h
framework/src/: launch.cpp  subwindow.cpp
